@@ -1,0 +1,1 @@
+org.xbill.DNS.spi.DNSJavaNameServiceDescriptor
